<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:visible="true"
        android:id="@+id/action_anasayfa"
        android:enabled="true"
        android:icon="@drawable/x_ic_menu1"
        android:title="@string/ana_sayfa"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_urunler"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_apps_24"
        android:title="Kategoriler"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sepet"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_format_list_bulleted_24"
        android:title="@string/sepetim"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_ara"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24_beyaz"
        android:title="Ara"
        app:showAsAction="ifRoom" />


    <item
        android:visible="true"
        android:id="@+id/action_diger"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/hesab_m"
        app:showAsAction="ifRoom" />
</menu>