<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/arkaPlan"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true">


        <ImageView
            android:id="@+id/geriBligilendirme"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentStart="true"
            android:background="@drawable/buton_layout_secici"
            android:padding="@dimen/_10sdp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_left_arrow_geri"
            android:visibility="visible" />


        <TextView
            android:id="@+id/tvKategoriDetaylariBaslik"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center"
            android:text="@string/bilgilendirme_metinleri"
            android:textColor="@color/colorBeyaz"
            android:textSize="@dimen/_12sdp" />


        <ImageView
            android:id="@+id/sil"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/_10sdp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_delete_forever_24"
            android:visibility="invisible" />


    </RelativeLayout>


    <RadioGroup
        android:id="@+id/radioGrup"
        android:layout_below="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5sdp"
        android:orientation="horizontal">

        <RadioButton
            android:button="@android:color/transparent"
            android:layout_gravity="center"
            android:id="@+id/radioSozlesme"

            android:layout_margin="@dimen/_5sdp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/kullan_c_s_zle_mesi"
            android:fontFamily="@font/montserrat_semi_bold" />

        <RadioButton
            android:button="@android:color/transparent"
            android:layout_gravity="center"
            android:id="@+id/radioKvkk"

            android:layout_margin="@dimen/_5sdp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_10sdp"
            android:text="@string/kvkk_metni"
            android:gravity="center"
            android:fontFamily="@font/montserrat_semi_bold" />

    </RadioGroup>


    <ScrollView
        android:id="@+id/scroll"
        android:layout_below="@+id/radioGrup"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/bilgilendrimeMetinleriYazi"
            android:fontFamily="@font/montserrat_medium"
            android:id="@+id/tvBilgilendirme" />
    </ScrollView>


</RelativeLayout>