<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/arkaPlan"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true">


        <ImageView
            android:id="@+id/geri"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentStart="true"
            android:layout_gravity="left"
            android:background="@drawable/buton_layout_secici"
            android:padding="@dimen/_10sdp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_left_arrow_geri"
            android:visibility="visible" />


        <TextView
            android:id="@+id/tvKategoriDetaylariBaslik"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center"
            android:text="Profilim"
            android:textColor="@color/colorBeyaz"
            android:textSize="@dimen/_12sdp" />


        <ImageView
            android:id="@+id/tvAdreslerim"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/buton_layout_secici"
            android:padding="@dimen/_10sdp"
            android:scaleType="fitCenter"
            android:src="@drawable/x_ic_icon_adress_beyaz"
            android:visibility="visible" />


    </RelativeLayout>


    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:visibility="gone"
        app:cardCornerRadius="@dimen/_5sdp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvUyeOl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center|left"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="Adreslerim"
                android:textColor="@color/colorPrimary"

                android:textSize="@dimen/_14sdp"
                android:visibility="visible" />


            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/lay1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/frame"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:hint="@string/telefonX"

            app:boxBackgroundColor="@color/colorBeyaz"
            app:hintTextColor="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTelefon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:enabled="false"
                android:fontFamily="@font/montserrat_semi_bold"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="14"
                android:maxLines="1"
                android:singleLine="true"
                android:text=""
                android:textSize="@dimen/_12sdp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_weight="1"
                android:hint="@string/ad_n_z"
                app:boxBackgroundColor="@color/colorBeyaz"
                app:hintTextColor="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_8sdp"

                    android:fontFamily="@font/montserrat_semi_bold"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/_12sdp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_weight="1"
                android:hint="Soyadınız"
                app:boxBackgroundColor="@color/colorBeyaz"
                app:hintTextColor="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSoyad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/_12sdp" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:hint="@string/dogum_tarihi"
            app:boxBackgroundColor="@color/colorBeyaz"
            app:hintTextColor="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDogumTarihi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:focusable="false"
                android:fontFamily="@font/montserrat_semi_bold"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/_12sdp" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:orientation="vertical">


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton

                    android:id="@+id/radiKadin"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginRight="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:background="@drawable/arama_butonu_cerceve"
                    android:buttonTint="@color/colorPrimary"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/kad_n"
                    android:textSize="@dimen/_12sdp" />

                <RadioButton
                    android:id="@+id/radioErkek"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginLeft="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:background="@drawable/arama_butonu_cerceve"
                    android:buttonTint="@color/colorPrimary"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/erkek"
                    android:textSize="@dimen/_12sdp" />

            </RadioGroup>


        </LinearLayout>


        <TextView
            android:id="@+id/checkboxPolitika1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/kullan_c_s_zle_mesi"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/checkboxPolitika2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/kvkk_metni"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/tvGuncelle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/buton_mavi_acik_secici"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center"
            android:text="Güncelle"
            android:textColor="@color/colorBeyaz"
            android:textSize="@dimen/_14sdp"
            android:visibility="visible" />


        <TextView
            android:id="@+id/tvOturumuKapat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="Oturumu Kapat"
            android:textColor="@color/adresYazi"
            android:textSize="@dimen/_10sdp"
            android:visibility="visible" />


    </LinearLayout>


</RelativeLayout>